fix team image overflow

--- a/components/global/cards/team-member/team-member-card.module.scss
+++ b/components/global/cards/team-member/team-member-card.module.scss
@@ -27,6 +27,10 @@
         position: relative;
         z-index: 1;
 
+        img {
+            border-radius: 10px;
+        }
+
         .shapeWrapper {
             position: absolute;
             bottom: 0;
